[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/abilities/grenade/Grenade.gd" type="Script" id=1]
[ext_resource path="res://player/abilities/grenade/Explosion.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.1
mid_height = 0.2

[sub_resource type="CapsuleShape" id=2]
radius = 0.1
height = 0.2

[node name="Grenade" type="RigidBody"]
mass = 20.0
continuous_cd = true
can_sleep = false
script = ExtResource( 1 )
grenade = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="BlinkingLight" type="OmniLight" parent="."]
light_color = Color( 1, 0, 0, 1 )
omni_range = 1.0

[node name="LightTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true
[connection signal="timeout" from="LightTimer" to="." method="_on_LightTimer_timeout"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
